# myshell

./: CMakeLists.txt  makefile  new  new.c  prompt.c  prompt.h  shell  shell.c  shell.md  shellt  test
env/: CMakeLists.txt  cat.c  cp.c  echo.c  kill.c  less.c  ln.c  ls.c  makefile  mkdir.c  mv.c  ps.c  pwd.c  rm.c  test  touch.c  xargs.c
